# ai-powered-parallel-log-analyzer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md
ai_modules/: alert_explainer.py  explanation_ai.py  gemini_client.py  rule_generation_ai.py  rule_generator.py
backend/: Cargo.toml  rules.json
backend/src/: ai_module.rs  log_parser.rs  log_processor.rs  main.rs  models.rs  parallel_analysis.rs  rules_engine.rs  sequential_analysis.rs  server.rs  threat_detection.rs  utils.rs
backend/src/distributed_analysis/: master.rs  worker.rs
frontend/: astro.config.mjs
frontend/public/data/: generate_logs.py  generate_normal_logs.py
frontend/src/components/: AITextToRule.astro  DashboardContainer.astro  DashboardContainer.css  DetectionRules.astro  RealtimeAnalysis.astro  ThreatDetections.astro  ThreatDetections.css
frontend/src/styles/: global.css
