[package]
name = "log_analysis_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
async-trait = "0.1.50"
log = "0.4"
env_logger = "0.9"
actix-web = "4"
actix-cors = "0.6.0"
dotenv = "0.15"
